<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
      <View  
	   android:layout_width="fill_parent"
	    android:layout_height="1dp" 
	   android:background="@color/gray_qian"  
	/>  
    <ImageView 
        android:id="@+id/img_book"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/round"
        android:paddingTop="8dp"
        android:src="@drawable/photo"
        />
    <RelativeLayout 
        android:id="@+id/right_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/img_book"
        >
	     <TextView 
	        android:id="@+id/txt_book_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/book"
	        android:textSize="17sp"
	        android:textColor="@color/word_color"
	        />
	    <TextView 
	        android:id="@+id/txt_author_z"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/writer"
	        android:textColor="@color/word_color"
	        android:layout_below="@id/txt_book_name"/>
	 	<TextView 
	 	    android:id="@+id/txt_author"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/word_color"
	        android:text="@string/user_name"
	        android:layout_alignTop="@id/txt_author_z"
	        android:layout_toRightOf="@id/txt_author_z"/>
	 	<TextView 
	 	    android:id="@+id/txt_publish_z"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/publish"
	        android:textColor="@color/word_color"
	        android:layout_below="@id/txt_author_z"/>
	 	<TextView 
	 	    android:id="@+id/txt_publish"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/publish_ex"
	        android:textColor="@color/word_color"
	        android:layout_toRightOf="@id/txt_publish_z"
	        android:layout_alignTop="@id/txt_publish_z"/>
    </RelativeLayout>

  
</RelativeLayout>