<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/login_background"
    
    >
    <RelativeLayout 
        android:id="@+id/layout_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/img_back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:text="@string/back"
            android:layout_toRightOf="@id/img_back_login"
            />
    </RelativeLayout>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <ImageView 
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:src="@drawable/logo"
	        android:layout_centerInParent="true"
	        />
	</RelativeLayout>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="15dip"
	    android:layout_marginTop="10dp"
	    >
	    <EditText 
	        android:id="@+id/edit_userid"
	        android:layout_width="fill_parent"
	        android:layout_height="45dp"
	        android:hint="@string/edit_userid"
	        android:textColorHint="@color/white"
	        android:background="@drawable/id"
	        android:singleLine="true"
	        android:paddingLeft="40dp"
	        android:inputType="number"
	        />
	    <EditText 
	        android:id="@+id/edit_password"
	        android:layout_width="fill_parent"
	        android:layout_height="45dp"
	        android:hint="@string/put_password"
	        android:textColorHint="@color/white"
	        android:background="@drawable/password"
	        android:inputType="textPassword"
	        android:paddingLeft="40dp"
	        android:layout_marginTop="10dp"
	        android:layout_below="@id/edit_userid"
	        android:password="true"
	        android:singleLine="true"
	        />
	</RelativeLayout>
	<Button 
	    android:id="@+id/login_button"
	    android:layout_width="290dp"
	    android:layout_height="45dp"
	    android:layout_marginTop="15dp"
	    android:layout_gravity="center_horizontal"
	    android:background="@drawable/round_two"
	    android:text="@string/login"
	    android:textSize="18sp"
	    android:textColor="@color/white"
	    />
</LinearLayout>
