<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="60dp"
		android:orientation="vertical"        
        >
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            >
	        <TextView 
	            android:id="@+id/txt_bookname_record"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="C语言基础教程"
	            android:layout_marginLeft="10dp"
	            android:layout_centerVertical="true"
	            android:textSize="16sp"
	            
	            />
	        <ImageView 
	            android:id="@+id/img_lefttime"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingLeft="10dp"
	            android:paddingTop="2dp"
	            android:layout_marginRight="10dp"
	            android:layout_centerVertical="true"
	            android:layout_alignParentRight="true"
	            />
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            
            >
	        <TextView 
	            android:id="@+id/txt_borrowtime_record"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/borrow_time"
	            android:textSize="13sp"
	            android:layout_marginLeft="10dp"
	            android:textColor="@color/word_color"
	            android:layout_centerVertical="true"
	            />
	        <TextView 
	            android:id="@+id/txt_borrowdate_record"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/borrow_data"
	            android:textSize="13sp"
	            android:layout_toRightOf="@id/txt_borrowtime_record"
	            android:layout_alignTop="@id/txt_borrowtime_record"
	            />
            <TextView 
                android:id="@+id/txt_maturitytime_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maturity_time"
                android:textColor="@color/word_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="70dp"
                android:layout_toRightOf="@id/txt_borrowdate_record"
                />
            <TextView 
                android:id="@+id/txt_maturitydate_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_alignTop="@id/txt_maturitytime_record"
                android:text="@string/maturity_data"
                android:textSize="13sp"
                />
        </RelativeLayout>
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray_qian"
            />
    </LinearLayout>

</LinearLayout>
