<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/buttom_background"
    >
    <RelativeLayout 
        android:id="@+id/edit_data_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/blue_background"
        >
        <ImageView 
            android:id="@+id/back_edit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_massage"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            />
        <TextView 
            android:id="@+id/save_edit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/txt_background"
        >
        <RelativeLayout 
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:background="@drawable/phone_editor"
            >
            <EditText 
                android:id="@+id/edit_number_phone"
                android:layout_width="230dp"
                android:layout_height="20dp"
                android:singleLine="true"
                android:hint="@string/edit_number"
                android:textSize="13sp"
                android:background="@null"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:layout_centerInParent="true"
                />
            <Button 
                android:id="@+id/button_clear_phone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/clear"
                android:visibility="invisible"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
            
        </RelativeLayout>
    </RelativeLayout>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray_qian"
        />
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/txt_background"
        >
	    <RelativeLayout 
	        android:layout_width="270dp"
	        android:layout_height="35dp"
	        android:layout_centerInParent="true"
	        android:background="@drawable/mail_editor"
	        >
	        <EditText 
	            android:id="@+id/edit_number_email"
	            android:layout_width="230dp"
	            android:layout_height="20dp"
	            android:singleLine="true"
	            android:hint="@string/edit_number_email"
	            android:textSize="13sp"
	            android:background="@null"
	            android:inputType="textEmailAddress"
	            android:paddingLeft="10dp"
	            android:layout_centerInParent="true"
	            />
	        <Button 
	            android:id="@+id/button_clear_email"
	            android:layout_width="20dp"
	            android:layout_height="20dp"
	            android:background="@drawable/clear"
	            android:visibility="invisible"
	            android:layout_marginRight="10dp"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            />
	        
	    </RelativeLayout>
	</RelativeLayout>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray_qian"
        />
    
    

</LinearLayout>
